--- a/public/index.html
+++ b/public/index.html
@@ -27,13 +27,13 @@
                     <a href="#"> <img src="img/rewards_logo.png"  /></a>
                 </div>
                 <!-- <h1 class="title">rewards gateway</h1> -->
-                <!--<nav>-->
-                    <!--<ul>-->
-                        <!--<li><a href="#/customers">Assign</a></li>-->
-                        <!--<li><a href="#">Redeem</a></li>-->
-                        <!--<li><a href="#">Transfer</a></li>-->
-                    <!--</ul>-->
-                <!--</nav>-->
+                <nav>
+                    <ul>
+                        <li><a href="#/customers">Customers</a></li>
+                        <li><a href="#/configuration">Configuration</a></li>
+                        <li><a href="#">Transfer</a></li>
+                    </ul>
+                </nav>
             </header>
         </div>
 
@@ -56,9 +56,11 @@
         <script src="js/main.js"></script>
 
           <!-- 3rd party libraries -->
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-rc.0/angular.min.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-rc.0/angular-route.min.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-rc.0/angular-animate.min.js"></script>
+        <script src="js/vendor/angular.min.js"></script>
+        <script src="js/vendor/angular-route.min.js"></script>
+        <script src="js/vendor/angular-animate.min.js"></script>
+        <!--<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-rc.0/angular-route.min.js"></script>-->
+        <!--<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-rc.0/angular-animate.min.js"></script>-->
 
         <!-- Custom scripts -->
 
@@ -67,6 +69,7 @@
         <script src="app/services/config.js"></script>
         <script src="app/services/customersService.js"></script>
         <script src="app/services/configurationService.js"></script>
+        <script src="app/services/transactionService.js"></script>
         <script src="app/services/dataService.js"></script>
 
         <script src="app/controllers/customersController.js"></script>
